# Atlas

./: .dockerignore  .editorconfig  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  README.md  deploy_all.sh  deploy_backend.sh  deploy_frontend.sh  docker-compose.yml  pyproject.toml  rollback.sh  verify_deployment.sh
services/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/api/src/app/: __init__.py  main.py
services/api/src/app/application/: __init__.py
services/api/src/app/application/action_center/: __init__.py  dtos.py  entities.py  events.py  repositories.py  use_cases.py
services/api/src/app/application/common/: __init__.py  command.py  query.py  result.py  uow.py  use_cases.py
services/api/src/app/application/copilot/: __init__.py  models.py  prompts.py  service.py
services/api/src/app/application/demo/: __init__.py  definition.py  engine.py  factory.py  registry.py  runner.py  scheduler.py
services/api/src/app/application/events/: __init__.py  dispatcher.py  event_bus.py  exceptions.py  handlers.py  in_memory_bus.py  interfaces.py  publisher.py  registry.py
services/api/src/app/application/incidents/: __init__.py  dtos.py  use_cases.py
services/api/src/app/application/operational_state/: __init__.py  dto.py  exceptions.py  factory.py  predictions_agent.py  service.py  snapshot.py  state_manager.py  summary_agent.py  updater.py
services/api/src/app/application/ports/: __init__.py  ai_gateway.py  audit_gateway.py  authorization.py  clock.py  current_user.py  health_gateway.py  id_generator.py  maps_gateway.py  notification_gateway.py  storage_gateway.py  transaction.py  translation_gateway.py  user_repository.py
services/api/src/app/application/recommendations/: __init__.py  agent.py  calculator.py  engine.py  evaluator.py  factory.py  generator.py  validator.py
services/api/src/app/application/scenario_simulator/: __init__.py  analyzer.py  builder.py  executor.py  history.py  models.py  service.py  simulator.py  validator.py
services/api/src/app/application/shared/: __init__.py
services/api/src/app/config/: __init__.py  constants.py  environment.py  logging.py  settings.py
services/api/src/app/dependencies/: __init__.py  auth.py  container.py
services/api/src/app/infrastructure/: __init__.py
services/api/src/app/infrastructure/ai/: __init__.py  client.py  exceptions.py  factory.py
services/api/src/app/infrastructure/auth/: __init__.py  firebase.py  hasher.py  jwt.py
services/api/src/app/infrastructure/cache/: manager.py
services/api/src/app/intelligence/: __init__.py  context_retriever.py  exceptions.py  model_gateway.py  orchestrator.py  prompt_builder.py  prompt_registry.py  prompt_version.py  prompt_version_manager.py  response_validator.py  stadium_orchestrator.py  structured_output.py
services/api/src/app/presentation/: __init__.py  health.py  version.py
services/api/src/app/shared/: __init__.py  logging.py
services/api/tests/: conftest.py  test_action_center.py  test_application_common.py  test_auth.py  test_briefings.py  test_cache.py  test_config.py  test_copilot.py  test_dashboard_api.py  test_decision_engine.py  test_demo_engine.py  test_demo_scenario.py  test_errors.py  test_events.py  test_explainability.py  test_firestore.py  test_health.py  test_incidents.py  test_infrastructure.py  test_intelligence.py  test_jwt_auth.py  test_middleware.py  test_operational_state.py  test_ports.py  test_predictive.py  test_prompt_framework.py  test_rate_limiter.py  test_recommendation_agent.py  test_recommendation_generator.py  test_recommendations.py  test_repositories.py  test_resource_optimization.py  test_scenario_simulator.py  test_situation_summary_agent.py  test_stadium_orchestrator.py  test_streaming.py  test_structured_outputs.py  test_timeline_narrator.py  test_version.py
(+239 files in other folders)
