[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "atlas-api"
version = "0.1.0"
description = "ATLAS - Adaptive Tournament Logistics & Autonomous Stadium Intelligence"
requires-python = ">=3.12"

authors = [
    { name = "AdiMita Technologies" }
]

dependencies = [
    # Web
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",

    # Validation
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",

    # Dependency Injection
    "dependency-injector>=4.48.0",

    # Firebase
    "firebase-admin>=7.0.0",

    # Firestore
    "google-cloud-firestore>=2.21.0",

    # Cloud Storage
    "google-cloud-storage>=3.2.0",

    # Secret Manager
    "google-cloud-secret-manager>=2.24.0",

    # Logging
    "google-cloud-logging>=3.12.0",

    # Monitoring
    "google-cloud-monitoring>=2.28.0",

    # Vertex AI
    "google-genai>=1.31.0",

    # Authentication
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",

    # HTTP
    "httpx>=0.28.0",

    # Async
    "anyio>=4.10.0",

    # Serialization
    "orjson>=3.11.0",

    # Retry
    "tenacity>=9.1.0",

    # Logging
    "structlog>=25.4.0",

    # Observability
    "opentelemetry-api>=1.36.0",
    "opentelemetry-sdk>=1.36.0",

    # Utilities
    "python-dotenv>=1.1.1"
]

[project.optional-dependencies]

dev = [

    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.0",

    "ruff>=0.12.0",

    "mypy>=1.17.0",

    "pre-commit>=4.3.0",

    "types-passlib",

    "types-python-jose"
]

[tool.hatch.build.targets.wheel]
packages = ["services"]

[tool.ruff]

line-length = 100

target-version = "py312"

fix = true

exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "node_modules",
    "dist",
    "build"
]

[tool.ruff.lint]

select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "C4",
    "PIE",
    "RET",
    "RUF"
]

ignore = [
    "E501"
]

[tool.pytest.ini_options]

asyncio_mode = "auto"

testpaths = [
    "tests"
]

python_files = [
    "test_*.py"
]

[tool.coverage.run]

branch = true

source = [
    "services",
    "packages"
]

[tool.coverage.report]

show_missing = true

skip_covered = false

fail_under = 90

[tool.mypy]

python_version = "3.12"

strict = true

warn_unused_configs = true

warn_return_any = true

warn_unused_ignores = true

disallow_untyped_defs = true

disallow_any_generics = true

check_untyped_defs = true

no_implicit_optional = true

plugins = []
